--- a/index.html
+++ b/index.html
@@ -15,22 +15,26 @@
 
   <header class="header">
     <div class="container">
-      <div class="header__logo">
+      <div class="header__inner">
+        <div class="header__logo">
+          <img src="assets/images/logo-img.svg" alt="logo">
 
-      </div>
-      <nav class="header__nav">
-        <ul>
-          <li><a href="#">Features</a></li>
-          <li><a href="#">Pricing</a></li>
-          <li><a href="#">Integration</a></li>
-          <li><a href="#">Learn</a></li>
+        </div>
+        <nav class="header__nav">
+          <ul>
+            <li><a href="#">Features</a></li>
+            <li><a href="#">Pricing</a></li>
+            <li><a href="#">Integration</a></li>
+            <li><a href="#">Learn</a></li>
+          </ul>
+        </nav>
+        <ul class="header__auth">
+          <li><button class="button button_primary header__auth-button">Sign in</button></li>
+          <li><button class="button button_secondary header__auth-button">Book a demo</button></li>
         </ul>
-      </nav>
-      <ul class="header__auth">
-        <li><button class="header__auth-button">Sign in</button></li>
-        <li><button class="header__auth-button">Book a demo</button></li>
-      </ul>
-    </div>
+      </div>
+      </div>
+      
   </header>
 
   <main>
