--- a/index.html
+++ b/index.html
@@ -2,12 +2,17 @@
 <html lang="en">
 
 <head>
+
+  <link rel="icon" href="iconx/favicon.svg" type="image/svg+xml"> 
+  <link rel="icon" href="iconx/favicon.ico">
+  <link rel="apple-touch-icon" href="iconx/apple-touch-icon.png" />
+  <link rel="manifest" href="iconx/manifest.json" />
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- <link rel="stylesheet" href="assets/fonts/fonts.css"> -->
   <title>Whirl</title>
-<script type="module" src="main.js"></script>
+  <script type="module" src="main.js"></script>
 
 </head>
 
@@ -33,8 +38,8 @@
           <li><button class="button button_secondary header__auth-button">Book a demo</button></li>
         </ul>
       </div>
-      </div>
-      
+    </div>
+
   </header>
 
   <main>
