perfect pixel header

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
           </ul>
         </nav>
         <ul class="header__auth">
-          <li><button class="button button_primary header__auth-button">Sign in</button></li>
-          <li><button class="button button_secondary header__auth-button">Book a demo</button></li>
+          <li><button class="button button_secondary header__auth-button">Sign in</button></li>
+          <li><button class="button button_primary header__auth-button">Book a demo</button></li>
         </ul>
       </div>
     </div>
