--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
           </ul>
         </nav>
         <ul class="header__auth">
-          <li><button class="button button_secondary header__auth-button">Sign in</button></li>
-          <li><button class="button button_primary header__auth-button">Book a demo</button></li>
+          <li><button class="button button_secondary button_small">Sign in</button></li>
+          <li><button class="button button_primary button_small">Book a demo</button></li>
         </ul>
       </div>
     </div>
@@ -45,16 +45,16 @@
   <main>
     <section class="info">
       <div class="container">
-        <h1 class="info__header">Your everyday tasks, automated.</h1>
+        <div class="info__inner"><h1 class="info__header">Your everyday tasks, automated.</h1>
         <p class="info__slogan">Whirl lets you design and streamline your everyday tasks and workflows in just a few
           clicks.</p>
         <div class="info__buttons">
-          <button class="info__button info__button_buy">Book a demo</button>
-          <button class="info__button info__button_learn">Learn more</button>
+          <button class="button button_primary">Book a demo</button>
+          <button class="button button_secondary">Learn more</button>
         </div>
         <div class="info__img">
           <img src="assets/images/info-img.svg" alt="main_img">
-        </div>
+        </div></div>
       </div>
 
     </section>
