add customers block

--- a/index.html
+++ b/index.html
@@ -58,6 +58,19 @@
       </div>
 
     </section>
+
+    <section class="customers">
+      <div class="container">
+        <div class="customers__inner"><h1 class="customers__header">Trusted by 50,000+ companies</h1>
+        <ul class="customers__list">
+          <li><img src="assets/images/customers/1.svg" alt="focus-fox"></li>
+          <li><img src="assets/images/customers/2.svg" alt="now-in-tech"></li>
+          <li><img src="assets/images/customers/3.svg" alt="optimizer"></li>
+          <li><img src="assets/images/customers/4.svg" alt="carded"></li>
+        </ul>
+
+    </section>
+    
   </main>
 
 </body>
