add advantages section

--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
 
 <head>
-
-  <link rel="icon" href="iconx/favicon.svg" type="image/svg+xml"> 
+  <link rel="icon" href="iconx/favicon.svg" type="image/svg+xml">
   <link rel="icon" href="iconx/favicon.ico">
   <link rel="apple-touch-icon" href="iconx/apple-touch-icon.png" />
   <link rel="manifest" href="iconx/manifest.json" />
@@ -13,7 +12,6 @@
   <!-- <link rel="stylesheet" href="assets/fonts/fonts.css"> -->
   <title>Whirl</title>
   <script type="module" src="main.js"></script>
-
 </head>
 
 <body>
@@ -23,7 +21,6 @@
       <div class="header__inner">
         <div class="header__logo">
           <img src="assets/images/logo-img.svg" alt="logo">
-
         </div>
         <nav class="header__nav">
           <ul>
@@ -39,38 +36,61 @@
         </ul>
       </div>
     </div>
-
   </header>
 
   <main>
+    
     <section class="info">
       <div class="container">
-        <div class="info__inner"><h1 class="info__header">Your everyday tasks, automated.</h1>
-        <p class="info__slogan">Whirl lets you design and streamline your everyday tasks and workflows in just a few
-          clicks.</p>
-        <div class="info__buttons">
-          <button class="button button_primary">Book a demo</button>
-          <button class="button button_secondary">Learn more</button>
+        <div class="info__inner">
+          <h1 class="info__header">Your everyday tasks, automated.</h1>
+          <p class="info__slogan">Whirl lets you design and streamline your everyday tasks and workflows in just a few
+            clicks.</p>
+          <div class="info__buttons">
+            <button class="button button_primary">Book a demo</button>
+            <button class="button button_secondary">Learn more</button>
+          </div>
+          <div class="info__img">
+            <img src="assets/images/info-img.svg" alt="main_img">
+          </div>
         </div>
-        <div class="info__img">
-          <img src="assets/images/info-img.svg" alt="main_img">
-        </div></div>
       </div>
-
     </section>
 
     <section class="customers">
       <div class="container">
-        <div class="customers__inner"><h1 class="customers__header">Trusted by 50,000+ companies</h1>
-        <ul class="customers__list">
-          <li><img src="assets/images/customers/1.svg" alt="focus-fox"></li>
-          <li><img src="assets/images/customers/2.svg" alt="now-in-tech"></li>
-          <li><img src="assets/images/customers/3.svg" alt="optimizer"></li>
-          <li><img src="assets/images/customers/4.svg" alt="carded"></li>
-        </ul>
-
+        <div class="customers__inner">
+          <h1 class="customers__header">Trusted by 50,000+ companies</h1>
+          <ul class="customers__list">
+            <li><img src="assets/images/customers/1.svg" alt="focus-fox"></li>
+            <li><img src="assets/images/customers/2.svg" alt="now-in-tech"></li>
+            <li><img src="assets/images/customers/3.svg" alt="optimizer"></li>
+            <li><img src="assets/images/customers/4.svg" alt="carded"></li>
+          </ul>
     </section>
-    
+
+    <section class="advantages">
+      <div class="container">
+        <div class="advantages__inner">
+          <ul class="advantages__list">
+            <li class="advantages__item advantages__item_color_yellow">
+              <img src="assets/images/advantages/1.svg" alt="really-fast" class="advantages__icon">
+              <h3 class="advantages__title">Fast. Really fast.</h3>
+              <p class="advantages__text">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            </li>
+            <li class="advantages__item advantages__item_color_blue">
+              <img src="assets/images/advantages/2.svg" alt="really-fast" class="advantages__icon">
+              <h3 class="advantages__title">More bang for buck.</h3>
+              <p class="advantages__text">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            </li>
+            <li class="advantages__item advantages__item_color_rose">
+              <img src="assets/images/advantages/3.svg" alt="really-fast" class="advantages__icon">
+              <h3 class="advantages__title">Safe and secure.</h3>
+              <p class="advantages__text">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            </li>
+          </ul>
+    </section>
+
   </main>
 
 </body>
