add options block

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   </header>
 
   <main>
-    
+
     <section class="info">
       <div class="container">
         <div class="info__inner">
@@ -74,21 +74,89 @@
         <div class="advantages__inner">
           <ul class="advantages__list">
             <li class="advantages__item advantages__item_color_yellow">
-              <img src="assets/images/advantages/1.svg" alt="really-fast" class="advantages__icon">
+              <img src="assets/images/advantages/1.svg" alt="lightning" class="advantages__icon">
               <h3 class="advantages__title">Fast. Really fast.</h3>
-              <p class="advantages__text">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+              <p class="advantages__text">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                aliquip ex ea commodo consequat.</p>
             </li>
             <li class="advantages__item advantages__item_color_blue">
-              <img src="assets/images/advantages/2.svg" alt="really-fast" class="advantages__icon">
+              <img src="assets/images/advantages/2.svg" alt="dollar" class="advantages__icon">
               <h3 class="advantages__title">More bang for buck.</h3>
-              <p class="advantages__text">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+              <p class="advantages__text">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                aliquip ex ea commodo consequat.</p>
             </li>
             <li class="advantages__item advantages__item_color_rose">
-              <img src="assets/images/advantages/3.svg" alt="really-fast" class="advantages__icon">
+              <img src="assets/images/advantages/3.svg" alt="ok-gesture" class="advantages__icon">
               <h3 class="advantages__title">Safe and secure.</h3>
-              <p class="advantages__text">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+              <p class="advantages__text">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                aliquip ex ea commodo consequat.</p>
             </li>
           </ul>
+    </section>
+
+    <section class="options">
+      <div class="container">
+        <div class="options__inner">
+          <h2 class="options__title">We will take care of everything, so you can get back to relaxing.</h2>
+          <div class="options__content"><div class="options__accordion">
+            <details class="options__item">
+
+              <summary class="options__summary">
+                <img src="assets/images/options/1.svg" alt="power-button">
+                <span>Anti-loss technology</span>
+                <svg>
+                  <use href="assets/images/sprites.svg#arrow-down"></use>
+                </svg>
+              </summary>
+              <p class="options__text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+              </p>
+            </details>
+            <details class="options__item">
+              <summary class="options__summary">
+                <img src="assets/images/options/2.svg" alt="satisfied-smile">
+                <span>Exchange easily</span>
+                <svg>
+                  <use href="assets/images/sprites.svg#arrow-down"></use>
+                </svg>
+              </summary>
+              <p class="options__text">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium, numquam. Enim molestias qui
+                doloribus similique sint repudiandae labore necessitatibus suscipit!
+              </p>
+            </details>
+            <details class="options__item">
+              <summary class="options__summary">
+                <img src="assets/images/options/3.svg" alt="secret-message">
+                <span>Fully encrypted</span>
+                <svg>
+                  <use href="assets/images/sprites.svg#arrow-down"></use>
+                </svg>
+              </summary>
+              <p class="options__text">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium, numquam. Enim molestias qui
+                doloribus similique sint repudiandae labore necessitatibus suscipit!
+              </p>
+            </details>
+            <details class="options__item">
+              <summary class="options__summary">
+                <img src="assets/images/options/4.svg" alt="lightning">
+                <span>Plenty of options</span>
+                <svg>
+                  <use href="assets/images/sprites.svg#arrow-down"></use>
+                </svg>
+              </summary>
+              <p class="options__text">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium, numquam. Enim molestias qui
+                doloribus similique sint repudiandae labore necessitatibus suscipit!
+              </p>
+            </details>
+          </div>
+          <div class="options__image">
+            <img src="assets/images/options/image.svg" alt="nice-workplace" />
+
+          </div></div>
+
     </section>
 
   </main>
