add about section

--- a/index.html
+++ b/index.html
@@ -159,6 +159,31 @@
 
     </section>
 
+    <section class="about">
+      <div class="container">
+        <div class="about__inner">
+          <h2 class="about__title">What's Whirl all about?</h2>
+          <ul class="about__content">
+            <li class="about__item">
+              <div></div>
+              <h3>All on one place.</h3>
+              <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            </li>
+            <li class="about__item">
+              <img src="assets/images/about/1.svg" alt="magnify">
+              <h3>Get daily alerts.</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.</p>
+            </li>
+            <li class="about__item">
+              <img src="assets/images/about/2.svg" alt="display">
+              <h3>Safe and secure.</h3>
+              <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
   </main>
 
 </body>
