add checklist block

--- a/index.html
+++ b/index.html
@@ -98,64 +98,67 @@
       <div class="container">
         <div class="options__inner">
           <h2 class="options__title">We will take care of everything, so you can get back to relaxing.</h2>
-          <div class="options__content"><div class="options__accordion">
-            <details class="options__item">
+          <div class="options__content">
+            <div class="options__accordion">
+              <details class="options__item">
 
-              <summary class="options__summary">
-                <img src="assets/images/options/1.svg" alt="power-button">
-                <span>Anti-loss technology</span>
-                <svg>
-                  <use href="assets/images/sprites.svg#arrow-down"></use>
-                </svg>
-              </summary>
-              <p class="options__text">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-              </p>
-            </details>
-            <details class="options__item">
-              <summary class="options__summary">
-                <img src="assets/images/options/2.svg" alt="satisfied-smile">
-                <span>Exchange easily</span>
-                <svg>
-                  <use href="assets/images/sprites.svg#arrow-down"></use>
-                </svg>
-              </summary>
-              <p class="options__text">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium, numquam. Enim molestias qui
-                doloribus similique sint repudiandae labore necessitatibus suscipit!
-              </p>
-            </details>
-            <details class="options__item">
-              <summary class="options__summary">
-                <img src="assets/images/options/3.svg" alt="secret-message">
-                <span>Fully encrypted</span>
-                <svg>
-                  <use href="assets/images/sprites.svg#arrow-down"></use>
-                </svg>
-              </summary>
-              <p class="options__text">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium, numquam. Enim molestias qui
-                doloribus similique sint repudiandae labore necessitatibus suscipit!
-              </p>
-            </details>
-            <details class="options__item">
-              <summary class="options__summary">
-                <img src="assets/images/options/4.svg" alt="lightning">
-                <span>Plenty of options</span>
-                <svg>
-                  <use href="assets/images/sprites.svg#arrow-down"></use>
-                </svg>
-              </summary>
-              <p class="options__text">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium, numquam. Enim molestias qui
-                doloribus similique sint repudiandae labore necessitatibus suscipit!
-              </p>
-            </details>
+                <summary class="options__summary">
+                  <img src="assets/images/options/1.svg" alt="power-button">
+                  <span>Anti-loss technology</span>
+                  <svg>
+                    <use href="assets/images/sprites.svg#arrow-down"></use>
+                  </svg>
+                </summary>
+                <p class="options__text">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                  dolore magna aliqua.
+                </p>
+              </details>
+              <details class="options__item">
+                <summary class="options__summary">
+                  <img src="assets/images/options/2.svg" alt="satisfied-smile">
+                  <span>Exchange easily</span>
+                  <svg>
+                    <use href="assets/images/sprites.svg#arrow-down"></use>
+                  </svg>
+                </summary>
+                <p class="options__text">
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium, numquam. Enim molestias qui
+                  doloribus similique sint repudiandae labore necessitatibus suscipit!
+                </p>
+              </details>
+              <details class="options__item">
+                <summary class="options__summary">
+                  <img src="assets/images/options/3.svg" alt="secret-message">
+                  <span>Fully encrypted</span>
+                  <svg>
+                    <use href="assets/images/sprites.svg#arrow-down"></use>
+                  </svg>
+                </summary>
+                <p class="options__text">
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium, numquam. Enim molestias qui
+                  doloribus similique sint repudiandae labore necessitatibus suscipit!
+                </p>
+              </details>
+              <details class="options__item">
+                <summary class="options__summary">
+                  <img src="assets/images/options/4.svg" alt="lightning">
+                  <span>Plenty of options</span>
+                  <svg>
+                    <use href="assets/images/sprites.svg#arrow-down"></use>
+                  </svg>
+                </summary>
+                <p class="options__text">
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium, numquam. Enim molestias qui
+                  doloribus similique sint repudiandae labore necessitatibus suscipit!
+                </p>
+              </details>
+            </div>
+            <div class="options__image">
+              <img src="assets/images/options/image.svg" alt="nice-workplace" />
+
+            </div>
           </div>
-          <div class="options__image">
-            <img src="assets/images/options/image.svg" alt="nice-workplace" />
-
-          </div></div>
 
     </section>
 
@@ -167,19 +170,45 @@
             <li class="about__item">
               <div></div>
               <h3>All on one place.</h3>
-              <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+              <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                consequat.</p>
             </li>
             <li class="about__item">
               <img src="assets/images/about/1.svg" alt="magnify">
               <h3>Get daily alerts.</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.</p>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.
+              </p>
             </li>
             <li class="about__item">
               <img src="assets/images/about/2.svg" alt="display">
               <h3>Safe and secure.</h3>
-              <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+              <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                consequat.</p>
             </li>
           </ul>
+        </div>
+      </div>
+    </section>
+
+    <section class="checklist">
+      <div class="container">
+        <div class="checklist__inner">
+          <div class="checklist__image">
+            <img src="assets/images/checklist/image.svg" alt="useful-tools">
+          </div>
+          <div class="checklist__text">
+            <h3 class="checklist__title">Set, forget, and then track.</h3>
+            <div class="checklist__content">
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua.</p>
+                <ul>
+                  <li>Understand your options</li>
+                  <li>No lock-ins</li>
+                  <li>You own the shares</li>
+                </ul>
+                <button class="button">Book a demo  </button>
+            </div>
+          </div>
         </div>
       </div>
     </section>
