--- a/index.html
+++ b/index.html
@@ -213,6 +213,37 @@
       </div>
     </section>
 
+    <section class="benefits">
+      <div class="container">
+        <div class="benefits__inner">
+          <h2 class="benefits__title">Your tasks, automated.</h2>
+          <p class="benefits__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <ul class="benefits__list">
+            <li class="benefits__item">
+              <img src="assets/images/benefits/1.svg" alt="graph">
+              <h3>Learn your options.</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+            </li>
+            <li class="benefits__item">
+              <img src="assets/images/benefits/2.svg" alt="lightning">
+              <h3>Stay informed.</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et doloretro.</p>
+            </li>
+            <li class="benefits__item">
+              <img src="assets/images/benefits/3.svg" alt="exclamation-marks">
+              <h3>Automate it all.</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor ipsum.</p>
+            </li>
+            <li class="benefits__item">
+              <img src="assets/images/benefits/4.svg" alt="thumbs-up">
+              <h3>Stay informed.</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod incididunt ut labore et consectetur.</p>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
   </main>
 
 </body>
