add get-started section

--- a/index.html
+++ b/index.html
@@ -296,6 +296,20 @@
       </div>
     </section>
 
+    <section class="get-started">
+      <div class="container">
+        <div class="get-started__inner">
+          <h2 class="get-started__title">Get started with Whirl</h2>
+          <p class="get-started__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
+          <button class="button button_primary get-started__button">Book a demo</button>
+          <ul class="get-started__list">
+            <li>Free 30-day trial</li>
+            <li>No credit-card required</li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
   </main>
 
 </body>
