--- a/index.html
+++ b/index.html
@@ -300,7 +300,8 @@
       <div class="container">
         <div class="get-started__inner">
           <h2 class="get-started__title">Get started with Whirl</h2>
-          <p class="get-started__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
+          <p class="get-started__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+            incididunt.</p>
           <button class="button button_primary get-started__button">Book a demo</button>
           <ul class="get-started__list">
             <li>Free 30-day trial</li>
@@ -309,6 +310,69 @@
         </div>
       </div>
     </section>
+
+    <footer class="footer">
+      <div class="container">
+        <div class="footer__top">
+          <div class="footer__about">
+            <div class="footer__logo">
+              <img src="assets/images/logo-img.svg" alt="">
+            </div>
+            <address class="footer__authors">
+              <span>Built by <a href="#">Nikolai Bain</a>.</span>
+              <span>Powered by <a href="#">Webflow</a>.</span>
+            </address>
+          </div>
+          <nav class="footer__nav-block">
+            <h3>Info</h3>
+            <ul>
+              <li><a href="#">Features</a></li>
+              <li><a href="#">Pricing</a></li>
+              <li><a href="#">Blog</a></li>
+              <li><a href="#">Support</a></li>
+              <li><a href="#">Terms & Conditions</a></li>
+              <li><a href="#">Privacy Policy</a></li>
+            </ul>
+          </nav>
+          <nav class="footer__nav-block">
+            <h3>Admin</h3>
+            <ul>
+              <li><a href="#">Style Guide</a></li>
+              <li><a href="#">Licenses</a></li>
+              <li><a href="#">Instructions</a></li>
+              <li><a href="#">Changelog</a></li>
+              <li><a href="#">Password</a></li>
+              <li><a href="#">404</a></li>
+            </ul>
+          </nav>
+          <div class="footer__subscribe-block">
+            <h3>Newsletter</h3>
+            <p>Sign up for the latest news, company insights, and Whirl updates.</p>
+            <form class="footer__subscribe-form" onsubmit="event.preventDefault()">
+              <input type="text" placeholder="Your email" />
+              <button type="submit"></button>
+            </form>
+            </form>
+          </div>
+
+        </div>
+        <div class="footer__bottom">
+          <address class="footer__copyright">
+            © 2022 Whirl. All Rights Reserved. Illustrations by <a href="#">Streamline</a>
+          </address>
+          <nav class="footer__socials">
+            <a href="#">
+              <img src="assets/images/footer/twitter.svg" alt="twitter">
+            </a>
+            <a href="#">
+              <img src="assets/images/footer/instagram.svg" alt="instagram">
+            </a>
+            <a href="#">
+              <img src="assets/images/footer/facebook.svg" alt="facebook">
+            </a>
+          </nav>
+        </div>
+    </footer>
 
   </main>
 
